# Omnitrix

./: .mxproject  CMakeLists.txt  Omnitrix.ioc  README.md
Core/Inc/: main.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  freertos.c  gpio.c  main.c  rtc.c  spi.c  stm32f4xx_it.c  tim.c
User/bsp/: bsp_delay.c  bsp_iic.c  bsp_iic.h  struct_typedef.h
User/device/: BL24C02.c  BL24C02.h  CST816.c  CST816.h  KT6328.c  lcd.c  lcd.h  lcd_init.c  lcd_init.h  lcdfont.h  power.c  power.h
User/task/: TopDefine.h  initTask.c  ledTask.c  userTask.c  userTask.h
cmake/stm32cubemx/: CMakeLists.txt
